# HMM

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: pydant.py  pydantic.py
src/models/: forback.py  utils.py
src/models/AsHMM/: BayesianNetworks.py  model.py
test/: mocks.py  test_BN.py  test_ashmm.py
